fix: there is no wordwrap at introductie
Now it has a max-width and wordwrap

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ body {
 .about-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin-left: 30px;
   margin-right: 30px;
